--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -41,7 +41,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../img/hero/tablet/tablet1x.jpg");
+      url("../img/hero/tablet/tablet1x.png");
   }
   @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
@@ -51,7 +51,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../img/hero/tablet/tablet2x.jpg");
+      url("../img/hero/tablet/tablet2x.png");
   }
   @media screen and (min-width: 1200px) {
     height: 600px;
@@ -63,7 +63,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../img/hero/pc/pc.jpg");
+      url("../img/hero/pc/pc.png");
   }
   @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
@@ -73,7 +73,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../img/hero/pc/pc2x.jpg");
+      url("../img/hero/pc/pc2x.png");
   }
 }
 
