--- a/css/main.css
+++ b/css/main.css
@@ -559,6 +559,12 @@ summary {
   color: #2196f3;
 }
 
+@media screen and (max-width) {
+  .contact__link {
+    color: #2196f3;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .contact__link {
     padding: 32px 0;
@@ -1762,6 +1768,10 @@ img {
 
 @media screen and (max-width: 767px) {
   .filters {
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
     -webkit-flex-wrap: wrap;
         -ms-flex-wrap: wrap;
             flex-wrap: wrap;
@@ -1769,13 +1779,31 @@ img {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 767px) and (max-width: 1199px) {
   .filters {
-    margin-bottom: 50px;
     -webkit-box-pack: center;
     -webkit-justify-content: center;
         -ms-flex-pack: center;
             justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1199px) {
+  .filters {
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin: 0 0 50px;
   }
 }
 
