--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -50,6 +50,9 @@
   &:focus {
     color: $accent-color;
   }
+  @media screen and (max-width) {
+    color: $accent-color;
+  }
 
   @media screen and (min-width: 1200px) {
     padding: 32px 0;
