--- a/sass/components/_portfolio-filters.scss
+++ b/sass/components/_portfolio-filters.scss
@@ -2,12 +2,21 @@
   display: flex;
 
   @media screen and (max-width: 767px) {
+    justify-content: flex-start;
     flex-wrap: wrap;
     margin-bottom: 40px;
   }
-  @media screen and (min-width: 768px) {
-    margin-bottom: 50px;
+
+  @media screen and (min-width: 767px) and (max-width: 1199px) {
     justify-content: center;
+    align-items: center;
+    padding-bottom: 30px;
+  }
+
+  @media screen and (min-width: 1199px) {
+    justify-content: center;
+    align-items: center;
+    margin: 0 0 50px;
   }
 }
 
